# chat-conv-fin-qa

./: .gitignore  README.md  checks.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
chat_conv_fin_qa/: __main__.py  chat_history.py
chat_conv_fin_qa/mcp/client/: evaluate.py  main.py
chat_conv_fin_qa/mcp/servers/: maths.py
chat_conv_fin_qa/model/: anthropic.py  base.py  openai.py
chat_conv_fin_qa/utils/: chat.py
