[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-conv-fin-qa"
version = "0.0.1"
description = "Chatbot for financial question answering"
authors = [
  {name = "Ravinda Gunaratne", email = "ravindag@hotmail.com"},
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = "~=3.12"
dependencies = [
  "requests==2.31.0",
]

[project.optional-dependencies]
testing = [
    "flake8==7.1.1",
    "pylint==3.3.3",
    "mypy==1.13.0",
    "black==24.10.0",
    "pydoclint==0.6.0",
    "pyenchant==3.2.2",
    "semgrep==1.103.0",
    "types-requests==2.32.0.20250301",
    "types-waitress==3.0.1.20241117"
]
